--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <p class="w3-justify">
 		Hallo, ich bin Korinna!</p>
 	<p class="w3-justify">
-		Ich bin als Wisseschftlerin im Bereich Denkmalpflege und als freiberufliche Autorin tätig. Mich begeistert die Forschung über Architektur und Projekte an ihr Ziel zu bringen. Gerne setze ich mich für die Anerkennung von Gebäuden ein, die nicht unmittelbare Wertschätzung in unserer Gesellschaft erfahren.
+		Ich bin als Wisseschaftlerin im Bereich Denkmalpflege und als freiberufliche Autorin tätig. Mich begeistert die Forschung über Architektur und Projekte an ihr Ziel zu bringen. Gerne setze ich mich für die Anerkennung von Gebäuden ein, die nicht unmittelbare Wertschätzung in unserer Gesellschaft erfahren.
 		Mehr über meinen Lebensweg <a href="./lebenslauf.html">hier</a>.</p>
 		        <img src="./img/pic.jpg" class="w3-circle" alt="Korinna Weber" style="width:300px">
 	</div>
@@ -93,7 +93,7 @@
 	</ul> 
 	</p>
     <p class="w3-justify">Die Vorträge werden auf Deutsch, Englisch und Französisch vor Ort und digital angeboten. </p>
-	<p class="w3-justify">Interesse an einer Lesung? Schreiben Sie gerne eine Email an <b>kori.z.weber[at]gmail.com</b>.</p>
+	<p class="w3-justify">Interesse an einer Lesung? Schreiben Sie gerne eine Email an <b>kori.z.weber[at]gmail.com</b></p>
 	</div>	
 	
 		<!-- Veröffentlichungen -->
