--- a/index.html
+++ b/index.html
@@ -38,7 +38,15 @@
 <!-- Page content -->
 <div class="w3-content" style="max-width:2000px;margin-top:60px">
 
-  <!-- Start -->
+     <div class="w3-container w3-content w3-center" style="max-width:800px">	
+		<div class="w3-panel w3-border w3-border-blue-gray w3-round-xlarge w3-large w3-padding-large">
+			Aktuelle Neuerscheinung:<br> «<i>Die Griechisch-Orthodoxe Allerheiligenkirche</i>»<br>
+			<a href="#buch">Mehr Informationen</a>&nbsp;&nbsp;&nbsp; <a href="https://kunstverlag-fink.de/titel/die-griechisch-orthodoxe-allerheiligenkirche-in-muenchen/" target="_blank">Buch jetzt bestellen!</a>
+		</div>
+	</div>
+	
+	
+    <!-- Start -->
   
     <div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="start">
     <h1 class="w3-wide">Korinna Zinovia Weber</h1>
@@ -54,7 +62,7 @@
 		        <img src="./img/pic.jpg" class="w3-circle" alt="Korinna Weber" style="width:300px">
 	</div>
 
-<div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="publik">
+<div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="buch">
     <h3 class="w3-left-align">Neuerscheinungen</h3>
 	
 	
