--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
 
 <div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="buch">
     <h3 class="w3-left-align">Neuerscheinungen</h3>
-	
+
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/G6wy2WaqTNE?si=I0g74EM1ZdZuP2qQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 	
 	<p class="w3-justify"> Anfang Oktober 2023 ist mein Buch «Die Griechisch-Orthodoxe Allerheiligenkirche» beim renommierten <a href="https://kunstverlag-fink.de/titel/die-griechisch-orthodoxe-allerheiligenkirche-in-muenchen/">Kunstverlag Josef Fink</a> erschienen.</p>
 	<p class="w3-justify"> Das Buch befasst sich mit einem besonderen Umbau. Aus der 1929 erbauten Röm.-Kath. Allerseelenkirche ist in den 1990er Jahren die Gr.-Orth. Allerheiligenkirche geworden. Es soll ein Beitrag zu „proaktiver“ Denkmalpflege für einen noch jungen Sakralbau sein, der noch nicht als Denkmal anerkannt ist. Bereichert wird das Buch durch Vorwörter von Metropolit Augustinos von Deutschland, Kardinal Friedrich Wetter und Prof. Andreas Putz von der TU München und bisher nicht publiziertem Archivmaterial zu beiden Kirchen.</p>
