--- a/lebenslauf.html
+++ b/lebenslauf.html
@@ -46,6 +46,12 @@
 	<p class="w3-justify">Seit 2023 engagiere ich mich ehrenamtlich in der Auswahlkommission der Studienstiftung.</p>
 	<p class="w3-justify">Ich lebe und arbeite in Zürich und München.</p>
 	</div>
+
+	<div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="start">
+    	<h3 class="w3-left-align">Und sonst so...</h3>
+    	Vor ein paar Jahren durfte ich zum Jubiläum des Bayerisch-Französischen Hochschulzentrums vor der Kamera stehen. Hier gehts zum Video:
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/XL-ojAfUi3I?si=ffuH4rEdLHzG1Ga9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+	</div>
 	
 	<div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="start">
    	<p class="w3-justify"><a href="./index.html">Zurück zum Start.</a></p>
