--- a/lebenslauf.html
+++ b/lebenslauf.html
@@ -49,8 +49,8 @@
 
 	<div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="start">
     	<h3 class="w3-left-align">Und sonst so...</h3>
-    	Vor ein paar Jahren durfte ich zum Jubiläum des Bayerisch-Französischen Hochschulzentrums vor der Kamera stehen. Hier gehts zum Video:
-	<iframe width="560" height="315" src="https://www.youtube.com/embed/XL-ojAfUi3I?si=ffuH4rEdLHzG1Ga9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    	Vor ein paar Jahren durfte ich zum Jubiläum des Bayerisch-Französischen Hochschulzentrums vor der Kamera stehen. <a href="https://www.youtube.com/embed/XL-ojAfUi3I?si=ffuH4rEdLHzG1Ga9"> Hier</a> gehts zum Video.
+	
 	</div>
 	
 	<div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="start">
