--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
 
 	<p class="w3-justify"> Am 17. November 2023 führte Karin Berkemann von <a href="https://www.moderne-regional.de/kleinkirchen-pilgern-korinna-weber-allerheiligenkirche-muenchen/">moderneRegional</a>	ein Gespräch mit mir zu meiner Forschung.
 	</p>
+	<p class="w3-justify"> Am 22. November 2023 erschien ein Interview mit mir über das Buch in der <a href="https://www.griechenland.net/">Griechenlandzeitung</a>.
+	</p>
 	
 	<img src="./img/Buch3.jpg" class="w3-circle" alt="Mein Buch" style="max-width:400px">
 
