--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 	</p>
     <p class="w3-justify">Die Vorträge werden auf Deutsch, Englisch und Französisch vor Ort und digital angeboten. </p>
 	<p class="w3-justify">Interesse an einer Lesung? Schreiben Sie gerne eine Email an <b>kori.z.weber[at]gmail.com</b></p>
-	<img src="./img/IMG_5494.jpg" class="w3-circle" alt="Buchvorstellung" style="max-width:400px">
+	<img src="./img/IMG_5494.JPG" class="w3-circle" alt="Buchvorstellung" style="max-width:400px">
   </div>	
 	
 		<!-- Veröffentlichungen -->
