--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 		<li>Der Weg vom Forschungsbeginn zum gedruckten Buch in 14 Monaten (an junge Wissenschaftler gerichtet)</li>
 	</ul> 
 	</p>
-    <p class="w3-justify">Die Vorträge werden auf Deutsch, Englisch und Französisch vor Ort und digital angeboten. </p>
+    <p class="w3-justify">Die Vorträge werden auf Deutsch, Englisch und Französisch vor Ort und digital angeboten. Ich bringe eine langjährige Vortragserfahrung mit und mir ist es wichtig jeden Vortrag an das jeweilige Publikum anzupassen.</p>
 	<p class="w3-justify">Interesse an einer Lesung? Schreiben Sie gerne eine Email an <b>kori.z.weber[at]gmail.com</b></p>
 	<img src="./img/IMG_5494.JPG" class="w3-circle" alt="Buchvorstellung" style="max-width:400px">
   </div>	
