--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 	<p class="w3-justify"> Am 22. November 2023 erschien ein Interview mit mir über das Buch in der <a href="https://www.griechenland.net/">Griechenlandzeitung</a>.
 	</p>
 
-	<p class="w3-justify"> Stimmen zum Buch:<i></i></p>
+	<p class="w3-justify"> Stimme(n) zum Buch:<i></i></p>
 	
 	<p class="w3-justify"><i>"(…) Inwiefern Beziehungen und gesellschaftliche Gegebenheiten (Gesetze und Mehrheitsmeinungen) ein architektonisches Gebäude beeinflussen ist wirklich ein Thema, welches mit extrem viel Liebe zum Detail hier behandelt wird (z. B. beim Glockenturm). Die griechische-orthodoxe Geschichte wird anhand ihrer Baukultur mit tiefen Einblicken erzählt (Bemalungen, aber auch die Situation mit den weißen Kykladen, die das Bild von Griechenland aus zentraleuropäischer, touristischer Sicht prägen). Die Qualität der Pläne, Layout und Fotos ist extrem hoch. Nicht nur das Material selbst sondern auch die Platzierung bei den passenden Themen. Fotos vom Bau helfen sehr ein Verständnis der Materialität zu bekommen und den Neubau in seiner Zeit zu lesen und das Gesamtthema von Architektur nicht als lineare Entwicklung, sondern als komplexes System von Raum-Zeit-Abhängigkeiten zu verstehen. 
 Das Kapitel zur Denkmalpflege gibt dem Lesenden ein gutes Verständnis über wie die Denkmalpflege funktioniert und beleuchtet so nochmals einen weiteren Aspekt der Architekturpolitik. Der Epilog mit deiner persönliche Beziehung zu der Situation, die der wissenschaftlichen Arbeit einmal mehr eine persönliche Note verleiht, aber auch nochmals die Tiefe der Verflechtungen einen Schritt weiter treibt, indem die vierte Wand und somit die vermeintliche Objektivität absichtlich gebrochen wird."
