--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ Martin Roesch, MSc ETH Architektur</i>
 	<div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="kontakt">
 	<p class="w3-center" id="kontakt">Lust auf eine Zusammenarbeit? Schreiben Sie eine Email an </p>
 	<p class="w3-center"><b>kori.z.weber[at]gmail.com</b></p>
-	<p class="w3-center" id="kontakt">Oder über <a href="linkedin.com/in/dr-korinna-zinovia-weber-05516996">LinkedIn</a> </p>
+	<p class="w3-center" id="kontakt">Oder über <a href="https://www.linkedin.com/in/dr-korinna-zinovia-weber-05516996/">LinkedIn</a> </p>
 	</div>
 	
 	
