--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ Martin Roesch, MSc ETH Architektur</i>
 	<p class="w3-justify">2019-2022<br>11 Reader des Lehrstuhls für Architektur und Konstruktion zur Prüfungsvorbereitung der Studierenden, ETH hochschulinterne Publikationen</p>
 	<p class="w3-justify">2019<br>Dissertation «Les ‘vestiges’ de l’opération Million dans l’oeuvre de Georges Candilis - Actualités et stratégies de sauvegarde pour un patrimoine de l’habitat économique du second-après guerre» bisher EPFL intern publiziert; DOI : 10.5075/epfl-thesis-7806</p>
 	<p class="w3-justify">2019<br>Artikel «The (anti-)monumentality of post-war social housing» aus dem Konferenzbeitrag für «On Monumentality» der Hellenic Open University hervorgegangen, wird 2024 publiziert</p>
-	<p class="w3-justify">2019<br>Artikel «(Weight)lifting the Olympic Heritage - The “White Elephants” of Athens 2004» gemeinsam mit Margarita Agriantoni, in: Hefte des deutschen Nationalkommitees LXXVI von ICOMOS, Berlin 2021</p>
+	<p class="w3-justify">2019<br>Artikel «(Weight)lifting the Olympic Heritage - The “White Elephants” of Athens 2004» gemeinsam mit Margarita Agriantoni, in: Hefte des deutschen Nationalkommitees LXXVI von ICOMOS, Berlin 2021. <a href="https://journals.ub.uni-heidelberg.de/index.php/icomoshefte/article/view/84626/78976">Hier</a> lesen.</p>
     <p class="w3-justify">2015<br>Artikel «Georges Candilis - Architect, Urban Planer and Author with communist ideas in a capitalist world», in:  Ljiljana Kolešnik, Tamara Bjažić Klarin (eds.), French Culture and Central East European Modern Art, Zagreb</p>
 	</div>	
 	
