--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <p class="w3-justify">
 		Hallo, ich bin Korinna!</p>
 	<p class="w3-justify">
-		Ich bin als Wisseschaftlerin im Bereich Architektur und Denkmalpflege sowie als freiberufliche Autorin tätig. Mich begeistert die Forschung über Architektur und Projekte an ihr Ziel zu bringen. Gerne setze ich mich für die Anerkennung von Gebäuden ein, die nicht unmittelbare Wertschätzung in unserer Gesellschaft erfahren.
+		Ich bin als Wissenschaftlerin im Bereich Architektur und Denkmalpflege sowie als freiberufliche Autorin tätig. Mich begeistert die Forschung über Architektur und Projekte an ihr Ziel zu bringen. Gerne setze ich mich für die Anerkennung von Gebäuden ein, die nicht unmittelbare Wertschätzung in unserer Gesellschaft erfahren.
 		Mehr über meinen Lebensweg <a href="./lebenslauf.html">hier</a>.</p>
 		        <img src="./img/pic.jpg" class="w3-circle" alt="Korinna Weber" style="width:300px">
 	</div>
