--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
   
     <div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="start">
     <h1 class="w3-wide">Korinna Zinovia Weber</h1>
+<h2 class="w3-wide">Bauwerke erforschen, erzählen, verstehen</h2>
 	</div>
 
   <div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="start">
