--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
     <a href="#" class="w3-bar-item w3-button w3-padding-medium">Start</a>
 	<a href="#kontakt" class="w3-bar-item w3-button w3-padding-medium w3-hide-small">Kontakt</a>
-    <a href="#lesung" class="w3-bar-item w3-button w3-padding-medium w3-hide-small">Lesungen</a>
+    <a href="#lesung" class="w3-bar-item w3-button w3-padding-medium w3-hide-small">Vorträge</a>
     <a href="#vero" class="w3-bar-item w3-button w3-padding-medium w3-hide-small">Veröffentlichungen</a>
   </div>
 </div>
