--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <a href="#" class="w3-bar-item w3-button w3-padding-medium">Start</a>
 	<a href="#kontakt" class="w3-bar-item w3-button w3-padding-medium w3-hide-small">Kontakt</a>
     <a href="#lesung" class="w3-bar-item w3-button w3-padding-medium w3-hide-small">Vorträge</a>
+	<a href="#Archiv" class="w3-bar-item w3-button w3-padding-medium w3-hide-small">Nachlassberatung</a>
     <a href="#vero" class="w3-bar-item w3-button w3-padding-medium w3-hide-small">Veröffentlichungen</a>
   </div>
 </div>
@@ -117,6 +118,15 @@ Martin Roesch, MSc ETH Architektur</i>
 	<p class="w3-justify">Interesse an einer Lesung? Schreiben Sie gerne eine Email an <b>kori.z.weber[at]gmail.com</b></p>
 	<img src="./img/IMG_5494.JPG" class="w3-circle" alt="Buchvorstellung" style="max-width:400px">
   </div>	
+
+	<!-- Archiv -->
+	 <div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="Archiv">
+	 <h3 class="w3-left-align">Umgang mit Nachlass von Architektinnen und Architekten oder Baudokumenten und Architekturfotos</h3>
+	 <p class="w3-justify">Vor der Digitalisierung produzierte ein Architekturbüro unzählige Akten in Papierform. Oft ist die nachfolgende Generation mit der Masse an Dokumenten überfordert oder braucht neue Lagerfläche. In anderen Fällen entsorgen die Urheber selbst noch im hohen Alter wertvolles Material ohne den Wert der eigenen Arbeit in einem weiteren Kontext einschätzen zu können. Schnell wird voreilig etwas weggeworfen oder geschreddert…
+In vielen Fällen geht dabei wertvolles historisches Material verloren. Daher biete ich archivische Bewertung und Beratung zum Umgang von Nachlässen im Zusammenhang mit Architektur.</p>
+	 <p class="w3-justify">Sie wissen nicht wohin mit alten Kisten voller Pläne und Fotos? Dann schreiben Sie mir.</p>
+	
+	</div>
 	
 		<!-- Veröffentlichungen -->
   <div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="vero">
