--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-<title>Korinna Zinovia Weber</title>
+<title>Dr. Korinna Zinovia Weber</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Persönliche Webseite von Korinna Zinovia Weber">
