--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-<title>Dr. Korinna Zinovia Weber</title>
+<title>Korinna Zinovia Weber</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Persönliche Webseite von Korinna Zinovia Weber">
@@ -50,7 +50,7 @@
     <!-- Start -->
   
     <div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="start">
-    <h1 class="w3-wide">Korinna Zinovia Weber</h1>
+    <h1 class="w3-wide">Dr. Korinna Zinovia Weber</h1>
 <h2 class="w3-wide">Bauwerke erforschen, erzählen, verstehen</h2>
 	</div>
 
