--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@ In vielen Fällen geht dabei wertvolles historisches Material verloren. Daher bi
 		<!-- Veröffentlichungen -->
   <div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="vero">
     <h3 class="w3-left-align">Veröffentlichungen</h3>
+	<p class="w3-justify">2024<br> Artikel über einen ungebauten Sakralbau in München, Berlin, erscheint im Herbst</p>
     <p class="w3-justify">2024<br>Monographie «Les ‘vestiges’ de l’opération Million dans l’oeuvre de Georges Candilis», Paris</p>
     <p class="w3-justify">2023<br>Monographie «Die griechisch-orthodoxe Allerheiligenkirche in München - Ein Bauprojekt der Ökumene als kulturelle und geistige Brücke zwischen Ost und West» Kunstverlag Josef Fink, Lindenberg im Allgäu (ISBN: 978-3-95976-457-5) Druckkostenzuschuss durch die Geschwister Boehringer Ingelheim Stiftung für Geisteswissenschaften</p>
 	<p class="w3-justify">2022<br>Artikel « Candilis-Josic-Woods : interdépendance et individualité d’une œuvre collective », in: Kollektiv und Kollaborativ : Positionen gemeinschaftlichen Arbeitens in Architektur und Planung vom 20. Jahrhundert bis zu Gegenwart, Bamberg 2022, DOI : 10.20378/irb-55457</p>
