--- a/index.html
+++ b/index.html
@@ -84,6 +84,8 @@
 Das Kapitel zur Denkmalpflege gibt dem Lesenden ein gutes Verständnis über wie die Denkmalpflege funktioniert und beleuchtet so nochmals einen weiteren Aspekt der Architekturpolitik. Der Epilog mit deiner persönliche Beziehung zu der Situation, die der wissenschaftlichen Arbeit einmal mehr eine persönliche Note verleiht, aber auch nochmals die Tiefe der Verflechtungen einen Schritt weiter treibt, indem die vierte Wand und somit die vermeintliche Objektivität absichtlich gebrochen wird."
 Martin Roesch, MSc ETH Architektur</i>
 	</p>
+	<p class="w3-justify"><i>"(...) die großartigen Fotos der Außen- und Innenaufnahmen, die präzisen Zeichnungen über die Umbauphase und die Fotos über den liturgischen Vollzug der Umwandlung aus einem ehemaligen katholischen Gotteshaus in eine Griechisch-Orthodoxe Kirche im Beisein von Metropolit Augoustinos und Kardinal Friedrich Wetter machen diese Publikation zu einem einzigartigen Dokument einer Kirchenneu-Nutzung durch eine  andere Konfessionskirche." Dr. Christian Hohmann, Pfarrer für Orthodoxie, Catholica und Arbeitsgemeinschaft Christlicher Kirchen in NRW</i>
+	</p>
 	
 	<img src="./img/Buch3.jpg" class="w3-circle" alt="Mein Buch" style="max-width:400px">
 
