--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="buch">
     <h3 class="w3-left-align">Neuerscheinungen</h3>
 
-	<iframe width="560" height="315" src="https://www.youtube.com/embed/G6wy2WaqTNE?si=I0g74EM1ZdZuP2qQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+	<iframe width="560" height="315" src="https://youtu.be/omDt9zQKYRY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 	
 	<p class="w3-justify"> Anfang Oktober 2023 ist mein Buch «Die Griechisch-Orthodoxe Allerheiligenkirche» beim renommierten <a href="https://kunstverlag-fink.de/titel/die-griechisch-orthodoxe-allerheiligenkirche-in-muenchen/">Kunstverlag Josef Fink</a> erschienen.</p>
 	<p class="w3-justify"> Das Buch befasst sich mit einem besonderen Umbau. Aus der 1929 erbauten Röm.-Kath. Allerseelenkirche ist in den 1990er Jahren die Gr.-Orth. Allerheiligenkirche geworden. Es soll ein Beitrag zu „proaktiver“ Denkmalpflege für einen noch jungen Sakralbau sein, der noch nicht als Denkmal anerkannt ist. Bereichert wird das Buch durch Vorwörter von Metropolit Augoustinos von Deutschland, Kardinal Friedrich Wetter und Prof. Andreas Putz von der TU München und bisher nicht publiziertem Archivmaterial zu beiden Kirchen. Erzpriester Apostolos Malamoussis begleitete von Anfang an das Buchprojekt als Vertreter der Kirche und gab mir auch den Anstoß eine "kurze" Zusammenfassung der Geschichte aufzuschreiben. Schnell wurde mir klar, dass das Stoff für ein ganzes Buch ist...</p>
@@ -78,6 +78,9 @@
 	<p class="w3-justify"> Am 22. November 2023 erschien ein Interview mit mir über das Buch in der <a href="https://www.griechenland.net/">Griechenlandzeitung</a>.
 	</p>
 
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/G6wy2WaqTNE?si=I0g74EM1ZdZuP2qQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+	
+	
 	<p class="w3-justify"> Stimme(n) zum Buch:<i></i></p>
 	
 	<p class="w3-justify"><i>"(…) Inwiefern Beziehungen und gesellschaftliche Gegebenheiten (Gesetze und Mehrheitsmeinungen) ein architektonisches Gebäude beeinflussen ist wirklich ein Thema, welches mit extrem viel Liebe zum Detail hier behandelt wird (z. B. beim Glockenturm). Die griechische-orthodoxe Geschichte wird anhand ihrer Baukultur mit tiefen Einblicken erzählt (Bemalungen, aber auch die Situation mit den weißen Kykladen, die das Bild von Griechenland aus zentraleuropäischer, touristischer Sicht prägen). Die Qualität der Pläne, Layout und Fotos ist extrem hoch. Nicht nur das Material selbst sondern auch die Platzierung bei den passenden Themen. Fotos vom Bau helfen sehr ein Verständnis der Materialität zu bekommen und den Neubau in seiner Zeit zu lesen und das Gesamtthema von Architektur nicht als lineare Entwicklung, sondern als komplexes System von Raum-Zeit-Abhängigkeiten zu verstehen. 
