--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="buch">
     <h3 class="w3-left-align">Neuerscheinungen</h3>
 
-	<iframe width="560" height="315" src="https://youtu.be/omDt9zQKYRY?si=iTVxD9Q-UnhZd93c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+	<iframe width="560" height="315" src="https://youtu.be/omDt9zQKYRY?si=suBjX6nU8IttDOeo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 	
 	<p class="w3-justify"> Anfang Oktober 2023 ist mein Buch «Die Griechisch-Orthodoxe Allerheiligenkirche» beim renommierten <a href="https://kunstverlag-fink.de/titel/die-griechisch-orthodoxe-allerheiligenkirche-in-muenchen/">Kunstverlag Josef Fink</a> erschienen.</p>
 	<p class="w3-justify"> Das Buch befasst sich mit einem besonderen Umbau. Aus der 1929 erbauten Röm.-Kath. Allerseelenkirche ist in den 1990er Jahren die Gr.-Orth. Allerheiligenkirche geworden. Es soll ein Beitrag zu „proaktiver“ Denkmalpflege für einen noch jungen Sakralbau sein, der noch nicht als Denkmal anerkannt ist. Bereichert wird das Buch durch Vorwörter von Metropolit Augoustinos von Deutschland, Kardinal Friedrich Wetter und Prof. Andreas Putz von der TU München und bisher nicht publiziertem Archivmaterial zu beiden Kirchen. Erzpriester Apostolos Malamoussis begleitete von Anfang an das Buchprojekt als Vertreter der Kirche und gab mir auch den Anstoß eine "kurze" Zusammenfassung der Geschichte aufzuschreiben. Schnell wurde mir klar, dass das Stoff für ein ganzes Buch ist...</p>
