--- a/index.html
+++ b/index.html
@@ -89,6 +89,9 @@ Martin Roesch, MSc ETH Architektur</i>
 	</p>
 	<p class="w3-justify"><i>"(...) die großartigen Fotos der Außen- und Innenaufnahmen, die präzisen Zeichnungen über die Umbauphase und die Fotos über den liturgischen Vollzug der Umwandlung aus einem ehemaligen katholischen Gotteshaus in eine Griechisch-Orthodoxe Kirche im Beisein von Metropolit Augoustinos und Kardinal Friedrich Wetter machen diese Publikation zu einem einzigartigen Dokument einer Kirchenneu-Nutzung durch eine  andere Konfessionskirche." Dr. Christian Hohmann, Pfarrer für Orthodoxie, Catholica und Arbeitsgemeinschaft Christlicher Kirchen in NRW</i>
 	</p>
+
+	<p class="w3-justify"><i>"Griechisch-Bayerische Freundschaft aus architektonischer Sicht. Ein faszinierendes Kapitel moderner Münchner Architekturgeschichte" Armin Vetter</i>
+	</p>
 	
 	<img src="./img/Buch3.jpg" class="w3-circle" alt="Mein Buch" style="max-width:400px">
 
