--- a/lebenslauf.html
+++ b/lebenslauf.html
@@ -18,39 +18,86 @@
 <div class="w3-top w3-center">
   <div class="w3-bar w3-blue-gray w3-card w3-large" style="width:100%">
     <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-    <a href="./index.html" class="w3-bar-item w3-button w3-padding-medium">Start</a>
-	<a href="./index.html#kontakt" class="w3-bar-item w3-button w3-padding-medium w3-hide-small">Kontakt</a>
-    <a href="./index.html#lesung" class="w3-bar-item w3-button w3-padding-medium w3-hide-small">Lesungen</a>
-    <a href="./index.html#vero" class="w3-bar-item w3-button w3-padding-medium w3-hide-small">Veröffentlichungen</a>
+    <a href="./index.html" class="w3-bar-item w3-button w3-padding-medium">Zurück</a>
+    <a href="#Berat" class="w3-bar-item w3-button w3-padding-medium w3-hide-small">Beratungsangebote</a>
+	<a href="#buch" class="w3-bar-item w3-button w3-padding-medium w3-hide-small">Bücher</a>
+	<a href="#vort" class="w3-bar-item w3-button w3-padding-medium w3-hide-small">Vorträge</a>
+	<a href="#port" class="w3-bar-item w3-button w3-padding-medium w3-hide-small">Portrait</a>
+	<a href="#kontakt" class="w3-bar-item w3-button w3-padding-medium w3-hide-small">Kontakt</a>
   </div>
 </div>
 
 <!-- Top menu on small screens -->
 <header class="w3-container w3-top w3-hide-large w3-blue-gray w3-large w3-padding-medium">
-  <a href="./index.html" class="w3-button w3-blue-gray w3-margin-right">Start</a> <a href="./index.html#kontakt" class="w3-button w3-blue-gray w3-margin-right">Kontakt</a>
+  <a href="#" class="w3-button w3-blue-gray w3-margin-right">Start</a> <a href="#kontakt" class="w3-button w3-blue-gray w3-margin-right">Kontakt</a>
 </header>
 
-<!-- Page content -->
-<div class="w3-content" style="max-width:2000px;margin-top:60px">
 
-  <!-- Start -->
-	<div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px">
-    <h1 class="w3-wide">Korinna Zinovia Weber</h1>
+<!-- Banner -->
+<img src="./img/portrait.jpg" alt="Strati" style="width:100%">
+
+    <!-- Start -->
+  
+    <div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="start">
+    <h1 class="w3-wide">Dr. Korinna Zinovia Weber</h1>
+	<h2 class="w3-wide">Bauwerke erforschen, erzählen, verstehen</h2>
+	<h3 class="w3-wide">Expertin für Architektur des 20. Jahrhunderts</h3>
+	</div>
 	</div>
 
 	<div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="start">
-    <h3 class="w3-left-align">Lebenslauf</h3>
-    <p class="w3-justify">Ich bin freiberufliche historische Bauforscherin und Autorin. Zwischen 2019 und 2023 war ich Lehrbeauftrage und Projektmanagerin an der Eidgenössischen Technischen Universität Zürich. Davor habe ich bis 2019 an der Ecole Polytechnique Fédérale de Lausanne über Sanierungen von Massenwohnungsbau der Nachkriegszeit (Les «vestiges» de l’opération Million dans l’oeuvre de Georges Candilis - Actualités et Strategies de sauvegarde pour un patrimoine du second après-guerre) promoviert, finanziert durch die Promotionsförderung der Studienstiftung des deutschen Volkes. Für die Doktorarbeit erhielt ich den <a href="https://www.zikg.eu/personen/kweber">Theodor-Fischer-Preis 2022</a> vom Zentralinstitut für Kunstgeschichte.</p>
-	<p class="w3-justify">2023 erschien mein Buch „Die Gr.-Orth. Allerheiligenkirche in München – ein Bauprojekt der Ökumene als kulturelle und geistige Brücke zwischen Ost und West“ (Kunstverlag Josef Fink). Es beschäftigt sich mit der Baugeschichte der Kirche bzw. des Umbaus von der Röm.-kath. Allerseelenkirche zu einer gr.-orth. Kirche und gibt damit neue Impulse für Bauten der 1990er Jahre als zukünftige Denkmäler. Die Druckkosten dafür wurden teilweise von der Geschwister Boehringer Ingelheim Stiftung übernommen.</p>
-	<p class="w3-justify">Mein Studium schloss ich an der TU München in Architektur ab. Mit dem Mobilitätsstipendium des Bayerisch-Französischen Hochschulzentrums verbrachte ich ein Jahr während des Studiums in Paris an der Ecole Nationale Supérieure d’Architecture Paris-La-Villette. Als Preisträgerin des International Council for Caring Communities (ICCC) Student Design Wettbewerbes 2014 (Team 3. Preis) stellte ich Projekte zum Thema soziale Integration bei der UN in New York und Beijing vor. Die Vorträge im Zusammenhang damit haben mir die Angst genommen, vor großem Publikum zu sprechen und gehören seitdem zu meinem Alltag.</p>
-	<p class="w3-justify">Seit 2023 engagiere ich mich ehrenamtlich in der Auswahlkommission der Studienstiftung.</p>
+    <h3 class="w3-left-align">Portrait</h3>
+    <p class="w3-justify"> <i>Warum sind Gebäude aus der Nachkriegszeit und später so unbeliebt?</i> Diese Frage hat mich während des Architekturstudiums nicht losgelassen, so dass ich mich entschied im Rahmen einer Promotion eine Antwort dafür zu finden. 
+	<p class="w3-justify"> Aufgewachsen in München in einer deutsch-griechischen Familie habe ich mich nach dem Abitur entschlossen Architektur zu studieren, das Fach zwischen Technik und Kunst. Nachdem ich ein paar Jahre in der Forschung und Lehre an renommierten Universitäten in der Schweiz tätig war, wagte ich 2024 den Schritt in die Selbstständigkeit.
+	
+	
+	
+	<p class="w3-justify">Mit meinem 2023 erschienenen Buch „Die Gr.-Orth. Allerheiligenkirche in München – ein Bauprojekt der Ökumene als kulturelle und geistige Brücke zwischen Ost und West“ (Kunstverlag Josef Fink) möchte ich Impulse für den Umgang mit jungen Bauwerken als zukünftige Denkmäler setzen.</p>
+	
+	
 	<p class="w3-justify">Ich lebe und arbeite in Zürich und München.</p>
 	</div>
-
-	<div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="start">
-    	<h3 class="w3-left-align">Und sonst so...</h3>
-    	Vor ein paar Jahren durfte ich zum Jubiläum des Bayerisch-Französischen Hochschulzentrums vor der Kamera stehen. <a href="https://www.youtube.com/embed/XL-ojAfUi3I?si=ffuH4rEdLHzG1Ga9"> Hier</a> gehts zum Video.
 	
+	
+	<div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="start">
+    <h3 class="w3-left-align">Stationen aus dem Lebenslauf</h3>
+
+	<p class="w3-justify">2023-2024</p>
+	<p class="w3-justify"><b>Ecole Polytechnique Fédérale de Lausanne, Schweiz</b>: Co-Leitung eines Buchprojektes und wissenschaftliche Mitarbeiterin</p>
+	<p style="color:cadetblue">Mit Essays erweiterter Ausstellungskatalog zu aktuellen Forschungsthemen im Bereich Klimawandel.</p>
+	
+	<p class="w3-justify">2019-2023</p>
+	<p class="w3-justify"><b>Eidgenössische Technische Hochschule Zürich, Schweiz</b>: Wissenschaftliche Mitarbeiterin</p>
+	 <p style="color:cadetblue">Projektmanagerin für das EU-geförderte H2020 Projekt TACK am Lehrstuhl für Geschichte und Theorie des Städtebaus, Prof. Tom Avermaete.</p>
+	
+	<p class="w3-justify">2022-2023</p>
+	<p class="w3-justify"><b>Zentralinstitut für Kunstgeschichte in München, Deutschland</b>: Fellowship des <a href="https://www.zikg.eu/personen/kweber">Theodor-Fischer-Preises 2022</a></p>
+	<p style="color:cadetblue">Forschungsprojekt «Die Gr.-Orth. Allerheiligenkirche in München» erschienen als Hardcover beim Kunstverlag Josef Fink
+im Oktober 2023, Druckkosten gefördert durch die Geschwister Boehringer Ingelheim Stiftung für Geisteswissenschaften</p>
+
+	<p class="w3-justify">2019-2022</p>
+	<p class="w3-justify"><b>Eidgenössische Technische Hochschule Zürich, Schweiz</b>: Wissenschaftliche Mitarbeiterin</p>
+	 <p style="color:cadetblue">Lehrbeauftragte am Lehrstuhl Architektur und Konstruktion von Prof. em. Markus Peter, Halten der Vorlesung "Konstruktion V/VI", Forschung zu Bauten des 20. Jh., Reader, Prüfungserstellung und -korrektur.</p>
+	
+	<p class="w3-justify">2016-2019</p>
+	<p class="w3-justify"><b>Ecole Polytechnique Fédérale de Lausanne, Schweiz</b>: PhD</p>
+	<p style="color:cadetblue">Promotion am Lehrstuhl für Techniken zur Erhaltung von Moderner Architektur(TSAM) über Sanierungen von Massenwohnungsbau der Nachkriegszeit (Les «vestiges» de l’opération Million dans l’oeuvre de Georges Candilis - Actualités et Strategies de sauvegarde pour un patrimoine du second après-guerre), Finanzierung durch die Studienstiftung des Deutschen Volkes</p>
+
+	<p class="w3-justify">2009-2015</p>
+	<p class="w3-justify"><b>Technische Universität München, Deutschland</b>: B.A. und M.A.</p>
+	<p style="color:cadetblue">Architektur, Schwerpunkt Bauen im Bestand;Stipendium des Elitenetzwerks Bayern (Max-Weber Programm)</p>
+	
+	<p class="w3-justify">2011-2012</p>
+	<p class="w3-justify"><b>Ecole Nationale Supérieure d’Architecture Paris La Villette, Frankreich</b>: Auslandsjahr</p>
+	<p style="color:cadetblue">Mobilitätsstipendium des BayFrance</p>
+
+	</div>
+	
+	<div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="start">
+    <h3 class="w3-left-align">Und sonst so...</h3>
+	<p class="w3-justify">Ich spreche fünf Sprachen: Deutsch, Griechisch, Englisch, Französisch und Italienisch.</p>
+    <p class="w3-justify">Vor ein paar Jahren durfte ich zum Jubiläum des Bayerisch-Französischen Hochschulzentrums <a href="https://www.youtube.com/embed/XL-ojAfUi3I?si=ffuH4rEdLHzG1Ga9">vor der Kamera</a> stehen.</p>
+	<p class="w3-justify">Seit 2023 engagiere ich mich ehrenamtlich in der Auswahlkommission der Studienstiftung.</p>
 	</div>
 	
 	<div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="start">
