--- a/index.html
+++ b/index.html
@@ -83,27 +83,57 @@
 </div>
 </div> 
 
-<!-- Bücher -->
-<div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="buch">
-    <h3 class="w3-left-align">Bücher und Veröffentlichungen</h3>
-<p class="w3-justify">Spannende Erkenntnisse und Geschichten über Architektur, die mich nicht loslassen, bemühe ich mich der Öffentlichkeit langfristig in Form von Artikeln oder Bücher zugänglich zu machen.</p>
 
-	  <div class="w3-container w3-content w3-center" style="max-width:800px">	
-		<div class="w3-panel w3-border w3-border-blue-gray w3-round-xlarge w3-large w3-padding-large">
-			Aktuelle Neuerscheinung:<br> «<i>Die Griechisch-Orthodoxe Allerheiligenkirche</i>»<br>
-			<a href="./buecher.html">Mehr Informationen</a>&nbsp;&nbsp;&nbsp; <a href="https://kunstverlag-fink.de/titel/die-griechisch-orthodoxe-allerheiligenkirche-in-muenchen/" target="_blank">Buch jetzt bestellen!</a>
-		</div>
-	</div>
-	</div>
+<!-- Bücher und Veröffentlichungen -->
+  <div class="w3-blue-grey" id="buch">
+    <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
+      <h2 class="w3-wide w3-center">Bücher und Veröffentlichungen</h2>
+      <p class="w3-opacity w3-center"><i>Akuelle Projekte und Neuerscheinungen</i></p><br>
+	  
+	  <p class="w3-justify">Spannende Erkenntnisse und Geschichten über Architektur möchte ich der Öffentlichkeit langfristig in Form von Artikeln oder Bücher zugänglich machen.</p>
 
-	<iframe width="560" height="315" src="https://www.youtube.com/embed/G6wy2WaqTNE?si=I0g74EM1ZdZuP2qQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-	
-	<p class="w3-justify"> Anfang Oktober 2023 ist mein Buch «Die Griechisch-Orthodoxe Allerheiligenkirche in München» beim renommierten <a href="https://kunstverlag-fink.de/titel/die-griechisch-orthodoxe-allerheiligenkirche-in-muenchen/">Kunstverlag Josef Fink</a> erschienen.</p>
+      <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
+        <div class="w3-third w3-margin-bottom">
+          <img src="./img/kirche_gif.gif" alt="Langensteinen" style="width:100%" class="w3-hover-opacity">
+          <div class="w3-container w3-white">
+            <p><b>Die Griechisch-Orthodoxe Allerheiligenkirche</b></p>
+            <p class="w3-opacity">Korinna Zinovia Weber</p>
+            <p>Dieses Buch dokumentiert erstmals die umfangreiche (Um-)Baugeschichte mit bisher unpubliziertem Archivmaterial und trägt damit zur langfristigen Erhaltung und historischen Einordnung des heutigen Bauwerks bei.</p>
+			<p class="w3-opacity">Kunstverlag Josef Fink, 160 Seiten, 117 Abb., Format 19 x 24 cm, 1. Auflage 2023, Verarbeitung: Hardcover Fadenheftung, ISBN 978-3-95976-457-5, Deutsch</p>
+            <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'"><a href="https://kunstverlag-fink.de/titel/die-griechisch-orthodoxe-allerheiligenkirche-in-muenchen/">Jetzt bestellen! </button>
+			<button class="w3-button w3-blue-grey w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'"><a href="./buecher.html">Mehr Informationen</button></a>
+          </div>
+        </div>
+		
+        <div class="w3-third w3-margin-bottom">
+          <img src="./img/Transcalar.jpg" alt="Transcalar" style="width:100%" class="w3-hover-opacity">
+          <div class="w3-container w3-white">
+            <p><b>Transcalar Prospects in Climate Crisis- architectural research in re/action</b></p>
+            <p class="w3-opacity">Jeffrey Huang, Dieter Dietz, Laura Trazic, Korinna Zinovia Weber (Eds.)</p>
+            <p>This book offers a vital compilation of research projects and essays reflecting the investigative efforts at EPFL Architecture.</p>
+			<p class="w3-opacity">Design: Hubertus Design, Lars Müller Publishers, 16,5 × 24 cm, 384 Seiten, ca. 280 Abb., softcover, 2024, ISBN 978-3-03778-765-6, English
+			</p>
+            <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'"><a href="https://www.lars-mueller-publishers.com/transcalar-prospects-climate-crisis/">Preorder now!</button></a>
+          </div>
+        </div>
+		
+        <div class="w3-third w3-margin-bottom">
+          <img src="./img/Hellas weightlifting.jpg" alt="San Francisco" style="width:100%" class="w3-hover-opacity">
+          <div class="w3-container w3-white">
+            <p><b>(Weight)lifting the Olympic Heritage - The “White Elephants” of Athens 2004</b></p>
+            <p class="w3-opacity">Korinna Zinovia Weber, Margarita Agriantoni</p>
+            <p>Short paper on the architectural "leftovers" of the 2004 Olympics in Athens.</p>
+			<p class="w3-opacity">Bd. 76 (2021): ICOMOS – Hefte des Deutschen Nationalkomitees</p>
+            <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'"><a href="https://journals.ub.uni-heidelberg.de/index.php/icomoshefte/article/view/84626/78976">Read open access</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 	
 		<div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="Baufor">
 	<a href="./buecher.html"><button class="w3-button w3-blue-grey">Mehr über Bücher und Veröffentlichungen</button></a>
 	</div>
-		
 	</div>
 	
 	<!-- Lesungen -->
