--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <div class="w3-third w3-margin-bottom">
           <img src="./img/kirche_gif.gif" alt="Langensteinen" style="width:100%" class="w3-hover-opacity">
           <div class="w3-container w3-white">
-            <p><b>Die Griechisch-Orthodoxe Allerheiligenkirche</b></p>
+            <p><b>Die Griechisch-Orthodoxe Allerheiligenkirche in München – Ein Bauprojekt der Ökumene als kulturelle und geistige Brücke zwischen Ost und West</b></p>
             <p class="w3-opacity">Korinna Zinovia Weber</p>
             <p>Dieses Buch dokumentiert erstmals die umfangreiche (Um-)Baugeschichte mit bisher unpubliziertem Archivmaterial und trägt damit zur langfristigen Erhaltung und historischen Einordnung des heutigen Bauwerks bei.</p>
 			<p class="w3-opacity">Kunstverlag Josef Fink, 160 Seiten, 117 Abb., Format 19 x 24 cm, 1. Auflage 2023, Verarbeitung: Hardcover Fadenheftung, ISBN 978-3-95976-457-5, Deutsch</p>
