--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             <p><b>(Weight)lifting the Olympic Heritage - The “White Elephants” of Athens 2004</b></p>
             <p class="w3-opacity">Korinna Zinovia Weber, Margarita Agriantoni</p>
             <p>Short paper on the architectural "leftovers" of the 2004 Olympics in Athens.</p>
-			<p class="w3-opacity">Bd. 76 (2021): ICOMOS – Hefte des Deutschen Nationalkomitees</p>
+			<p class="w3-opacity">in: Bd. 76 (2021): ICOMOS – Hefte des Deutschen Nationalkomitees, English</p>
             <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'"><a href="https://journals.ub.uni-heidelberg.de/index.php/icomoshefte/article/view/84626/78976">Read open access</button>
           </div>
         </div>
