--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
   <div class="w3-blue-grey" id="buch">
     <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
       <h2 class="w3-wide w3-center">Bücher und Veröffentlichungen</h2>
-      <p class="w3-opacity w3-center"><i>Akuelle Projekte und Neuerscheinungen</i></p><br>
+      <p class="w3-opacity w3-center"><i>Aktuelle Projekte und Neuerscheinungen</i></p><br>
 	  
 	  <p class="w3-justify">Spannende Erkenntnisse und Geschichten über Architektur möchte ich der Öffentlichkeit langfristig in Form von Artikeln oder Bücher zugänglich machen.</p>
 
