--- a/index.html
+++ b/index.html
@@ -92,6 +92,17 @@
 	  
 	  <p class="w3-justify">Spannende Erkenntnisse und Geschichten über Architektur möchte ich der Öffentlichkeit langfristig in Form von Artikeln oder Bücher zugänglich machen.</p>
 
+       <div class="w3-third w3-margin-bottom">
+          <img src="./img/cover-deutsch.jpg" alt="San Francisco" style="width:100%" class="w3-hover-opacity">
+          <div class="w3-container w3-white">
+            <p><b>"Mein NEUES altes Haus - eine Geschichte für Kinder über Umbau statt Neubau"</b></p>
+            <p class="w3-opacity">Korinna Zinovia Weber, Meruert Zharekesheva</p>
+            <p>Kinderbuch, Hardcover, 20 feste Seiten für kleine Hände</p>
+			<p class="w3-opacity">Architechne, Print-on-demand, 2024, erschienen in fünf Sprachen</p>
+            <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'"><a href="https://architechne.ch/meinneuesalteshaus.html">Mehr Informationen</button>
+          </div>
+        </div>
+	    
       <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
         <div class="w3-third w3-margin-bottom">
           <img src="./img/kirche_gif.gif" alt="Langensteinen" style="width:100%" class="w3-hover-opacity">
@@ -117,16 +128,7 @@
           </div>
         </div>
 		
-        <div class="w3-third w3-margin-bottom">
-          <img src="./img/Hellas weightlifting.jpg" alt="San Francisco" style="width:100%" class="w3-hover-opacity">
-          <div class="w3-container w3-white">
-            <p><b>(Weight)lifting the Olympic Heritage - The “White Elephants” of Athens 2004</b></p>
-            <p class="w3-opacity">Korinna Zinovia Weber, Margarita Agriantoni</p>
-            <p>Short paper on the architectural "leftovers" of the 2004 Olympics in Athens.</p>
-			<p class="w3-opacity">in: Bd. 76 (2021): ICOMOS – Hefte des Deutschen Nationalkomitees, p. 209-210, English</p>
-            <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'"><a href="https://journals.ub.uni-heidelberg.de/index.php/icomoshefte/article/view/84626/78976">Read open access</button>
-          </div>
-        </div>
+ 
       </div>
     </div>
   </div>
