--- a/index.html
+++ b/index.html
@@ -97,8 +97,9 @@
           <div class="w3-container w3-white">
             <p><b>"Mein NEUES altes Haus - eine Geschichte für Kinder über Umbau statt Neubau"</b></p>
             <p class="w3-opacity">Korinna Zinovia Weber, Meruert Zharekesheva</p>
-            <p>Kinderbuch, Hardcover, 20 feste Seiten für kleine Hände</p>
-			<p class="w3-opacity">Architechne, Print-on-demand, 2024, erschienen in fünf Sprachen</p>
+            <p>Dieses Buch erzählt die Geschichte der kleinen Lilian, deren hellblaues Haus abgerissen werden soll. Doch dann fragt sich Lilian, warum wir unsere Häuser eigentlich nicht zuerst reparieren und sie schreibt dem Besitzer einen Brief. Hier wird das Thema Nachhaltigkeit und Umbau in Architektur
+liebevoll den ganz Kleinen näher gebracht.</p>
+			<p class="w3-opacity">21x21cm, Hardcover, 20 feste Seiten für kleine Hände, Architechne, Print-on-demand, 2024, erschienen in fünf Sprachen</p>
             <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'"><a href="https://architechne.ch/meinneuesalteshaus.html">Mehr Informationen</button>
           </div>
         </div>
