--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
             <p>Dieses Buch erzählt die Geschichte der kleinen Lilian, deren hellblaues Haus abgerissen werden soll. Doch dann fragt sich Lilian, warum wir unsere Häuser eigentlich nicht zuerst reparieren und sie schreibt dem Besitzer einen Brief. Hier wird das Thema Nachhaltigkeit und Umbau in Architektur
 liebevoll den ganz Kleinen näher gebracht.</p>
 			<p class="w3-opacity">21x21cm, Hardcover, 20 feste Seiten für kleine Hände, Architechne, Print-on-demand, 2024, erschienen in fünf Sprachen</p>
+		   <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'"><a href="https://architechne.ch/">Jetzt bestellen! </button>
             <button class="w3-button w3-blue-grey w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'"><a href="https://architechne.ch/meinneuesalteshaus.html">Mehr Informationen</button></a>
           </div>
         </div>
