--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <h2 class="w3-wide w3-center">Bücher und Veröffentlichungen</h2>
       <p class="w3-opacity w3-center"><i>Aktuelle Projekte und Neuerscheinungen</i></p><br>
 	  
-	  <p class="w3-justify">Spannende Erkenntnisse und Geschichten über Architektur müssen weitergetragen werden.</p>
+	  <p class="w3-justify">Spannende Erkenntnisse und Geschichten über Architektur für alle.</p>
 	
 	<!-- Erste Säule -->
 		<!-- 1.1 Objekt -->
