--- a/index.html
+++ b/index.html
@@ -153,7 +153,8 @@
 	  <div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="port">
     <h3 class="w3-left-align">Portrait</h3>
 	<p class="w3-justify">
-		Ich bin als Wisseschaftlerin im Bereich Architektur und Denkmalpflege sowie als freiberufliche Autorin tätig. Mich begeistert die Forschung über Architektur und Projekte an ihr Ziel zu bringen. Gerne setze ich mich für die Anerkennung von Gebäuden ein, die nicht unmittelbare Wertschätzung in unserer Gesellschaft erfahren.
+		Ich bin als Wisseschaftlerin im Bereich Architektur und Denkmalpflege sowie als freiberufliche Autorin tätig. Mich begeistert die Forschung über Architektur und Projekte an ihr Ziel zu bringen. Gerne setze ich mich für die Anerkennung von Gebäuden ein, die nicht unmittelbare Wertschätzung in unserer Gesellschaft erfahren. Als gebürtige Münchnerin studierte ich Architektur an der
+TU München und der ENSA La Villette. Anschliessend promovierte ich an der EPFL und wurde Lehrbeauftragte und Projektmanagerin der ETH Zürich. Seit mehreren Jahren engagiere ich mich in der Architekturvermittlung für ein nicht-Fachpublikum. Das Thema Umbau und Erhalten liegt mir besonders am Herzen. 
 		<div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="Baufor">
 	<a href="./lebenslauf.html"><button class="w3-button w3-blue-grey">Mehr über Ihre Expertin</button></a>
 	</div>
