--- a/index.html
+++ b/index.html
@@ -132,6 +132,10 @@
 	<a href="./buecher.html"><button class="w3-button w3-blue-grey">Mehr über Bücher und Veröffentlichungen</button></a>
 	</div>
 	</div>
+
+
+<!-- Image -->
+<img src="./img/kinderbuch.jpg" alt="kinderbuch" style="width:100%">
 	
 	<!-- Lesungen -->
   <div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="vort">
