--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 		   <p class="w3-opacity">Korinna Zinovia Weber</p>
 		   <p>Construire un trois-pièces pour moins d’un million d’anciens francs (environ 23 000 €). Tel est l’objectif de l’opération Million lancée en France en 1954 par le gouvernement ; la crise du logement est alors à son apogée. L’agence de Georges Candilis, Alexis Josic et Shadrach Woods remporte le concours organisé l’année suivante et construira près de 4 300 logements sur vingt-huit sites. Tout à tour enquête et plaidoyer, l’ouvrage de Korinna Zinovia Weber relate cet épisode majeur et méconnu de la construction des années d’après-guerre et milite pour que les grands ensembles soient reconnus en tant que patrimoine architectural. Que reste-t-il de l’opération Million soixante-dix ans après sa mise en oeuvre ?</p>
 			<p class="w3-opacity">Les Editions de la Villette, 287 pages, 117 Abb., Format 15 x 22 cm, 1. Auflage 2025, Hardcover, ISBN 978-2375560563, Francais</p>
-		    <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'"><a href="https://editionsdelavillette.fr/produit/grands-ensembles-en-heritage/">Je commende! </button>
+		    <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'"><a href="https://editionsdelavillette.fr/produit/grands-ensembles-en-heritage/">Je commende! </a></button>
           </div>
 		 
 		 
@@ -244,4 +244,5 @@ function w3_close() {
 
 </body>
 </html>
+
 
