--- a/impressum.html
+++ b/impressum.html
@@ -7,27 +7,32 @@
 	<meta name="description" content="Persönliche Webseite von Korinna Zinovia Weber">
 	<meta name="keywords" content="Korinna Zinovia Weber, Korinna Weber, Denkmalpflege, Architektur">
 	<meta name="author" content="Korinna Zinovia Weber">
-<link rel="stylesheet" href="./site/w3.css">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-blue-grey.css">
+<link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
 <style>
+	  /* Globale Schriftart */
+    body {
+      font-family: 'Merriweather', serif;
+    }
 </style>
 </head>
 <body>
 
 <!-- Navbar -->
-
-<div class="w3-top w3-center">
-  <div class="w3-bar w3-blue-gray w3-card w3-large" style="width:100%">
-    <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-    <a href="./index.html" class="w3-bar-item w3-button w3-padding-medium">Start</a>
-	<a href="./index.html#kontakt" class="w3-bar-item w3-button w3-padding-medium w3-hide-small">Kontakt</a>
-    <a href="./index.html#lesung" class="w3-bar-item w3-button w3-padding-medium w3-hide-small">Lesungen</a>
-    <a href="./index.html#vero" class="w3-bar-item w3-button w3-padding-medium w3-hide-small">Veröffentlichungen</a>
+ <div class="w3-top w3-theme-l1 w3-wide w3-padding w3-card" style="width:100%">
+  <div class="w3-bar w3-blue-gray w3-card w3-large w3-center w3-hide-small" style="width:100%">
+  	<a href="index.html" class="w3-bar-item w3-button w3-padding-medium w3-hide-small">Start</a> 
+	<a href="buecher.html" class="w3-bar-item w3-button w3-padding-medium w3-hide-medium w3-hide-small">Bücher</a> 
+	<a href="angebote.html" class="w3-bar-item w3-button w3-padding-medium w3-hide-medium w3-hide-small">Angebote</a>
+	<a href="lebenslauf.html" class="w3-bar-item w3-button w3-padding-medium w3-hide-medium w3-hide-small">Portrait</a>
+	<a href="index.html#Kontakt" class="w3-bar-item w3-button w3-padding-medium w3-hide-small">Kontakt</a>
   </div>
 </div>
 
 <!-- Top menu on small screens -->
-<header class="w3-container w3-top w3-hide-large w3-blue-gray w3-large w3-padding-medium">
-  <a href="./index.html" class="w3-button w3-blue-gray w3-margin-right">Start</a> <a href="./index.html#kontakt" class="w3-button w3-blue-gray w3-margin-right">Kontakt</a>
+<header class="w3-container w3-top w3-hide-large w3-hide-medium w3-blue-gray w3-large w3-padding-medium">
+  <a href="index.html" class="w3-button w3-blue-gray w3-margin-right">Start</a> <a href="index.html#kontakt" class="w3-button w3-blue-gray w3-margin-right">Kontakt</a>
 </header>
 
 <!-- Page content -->
@@ -44,12 +49,13 @@
 	<p class="w3-justify"><b>Datenschutz</b>: Diese Webseite verwendet keine Cookies und es werden keine Nutzerdaten gespeichert. Wenn Sie dem Seitenbetreiber eine Email schreiben, dann werden Email-Adresse und Email-Inhalt gelesen und gespeichert.</p>
 	<p class="w3-justify"><b>Externe Link</b>: Der Webseitenbetreiber hat keinen Einfluss auf das Angebot, den Datenschutzbestimmungen usw. von gelinkten, externen Webseiten. Für diese gelten die entsprechenden Nutzungsbestimmungen.</p>
 	<p class="w3-justify"><b>Urheberrecht</b>: Die durch den Seitenbetreiber erstellten Inhalte unterliegen dem Urheberrecht. Die Vervielfältigung, Bearbeitung, Verbreitung und jede Art der Verwertung bedürfen einer schriftlichen Zustimmung. Downloads und Kopien dieser Seite sind nur für den privaten, nicht kommerziellen Gebrauch gestattet.</p>
+	<p class="w3-justify"><b>Gestaltung</b>: Lou Sophie Dörig</p>	
 	</div>
 	
-	<div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="start">
-   	<p class="w3-justify"><a href="./index.html">Zurück zum Start.</a></p>
+<!-- Zurück zum Start -->
+	<div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="Baufor">
+	<a href="./index.html"><button class="w3-button w3-blue-grey">Zurück zum Start</button></a>
 	</div>
-
   
 <!-- End Page Content -->
 </div>
